[package]
name = "bevy_smooth_pixel_camera"
version = "0.3.0"
edition = "2021"
authors = ["Doonv"]
description = "Smooth pixel-perfect camera for Bevy"
repository = "https://github.com/ka-de/bevy_smooth_pixel_camera"
categories = ["game-development", "graphics", "rendering"]
exclude = ["assets/", ".github/"]
keywords = ["game", "graphics", "bevy", "pixel", "pixel-perfect"]
license = "MIT"

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy", default-features = false, features = [
    "bevy_core_pipeline",
    "bevy_sprite",
] }

[dev-dependencies]
bevy = { git = "https://github.com/bevyengine/bevy" }

[lints]
rust.missing_docs = "warn"
